# GraphPH

./: .gitignore  README.md  pyproject.toml  requirements.txt  toyexample.ipynb
graphph/: __init__.py  h0_experiment.py  h0h1_connectome.py  h0h1_rings.py  latent_postproc.py
notebooks/: 01_h0_simulation_mixture_experiment.ipynb  02_h0h1_simulation_rings_experiment.ipynb  03_h0h1_connectome_like_experiment.ipynb  visualization_evaluation.ipynb
